--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ h1 {
 }
 
 .intro {
-  width: 50%;
-  margin: 0 auto;
+  margin: auto 35%;
+  padding-bottom: 5%;
 }
 .pro {
   font-size: 2rem;
@@ -35,7 +35,7 @@ h1 {
 }
 h2 {
   font-family: "Montserrat", sans-serif;
-  font-size: 2 rem;
+  font-size: 4rem;
   color: #407088;
   text-align: center;
   padding-top: 20px;
@@ -46,7 +46,7 @@ h2 {
 h3 {
   font-family: "Montserrat", sans-serif;
   color: #407088;
-  font-size: 1.5rem;
+  font-size: 3rem;
 }
 
 .title {
@@ -165,6 +165,7 @@ a:hover {
 }
 .skills-img {
   width: 100%;
+  margin: auto;
 }
 .skills-text {
   margin: 10%;
